将文章文件夹从posts改为blog并更新相关逻辑

--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -21,7 +21,7 @@ export interface Props {
 
 const props = Astro.props;
 const entryID = IdToSlug(props.id);
-const contentUrl = `/posts/${entryID}`;
+const contentUrl = `/blog/${entryID}`;
 const { time, wordCount } = props.readingMetadata;
 ---
 
