feat: 添加文章底部上下篇导航功能

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,10 +3,11 @@ import { getCollection } from "astro:content";
 import { IdToSlug } from "../../utils/hash";
 import PostLayout from "../../layouts/PostLayout.astro";
 import { render } from "astro:content";
+import { GetSortedPosts } from "../../utils/content";
 
 export async function getStaticPaths() {
-  const postEntries = await getCollection("blog");
-  return postEntries.map((entry) => ({
+  const posts = await GetSortedPosts();
+  return posts.map((entry) => ({
     params: { slug: IdToSlug(entry.id) },
     props: { entry },
   }));
@@ -14,6 +15,15 @@ export async function getStaticPaths() {
 
 const { entry } = Astro.props;
 const { Content } = await render(entry);
+const entryData = entry.data as any;
+const prevPost = entryData.prevSlug ? { 
+  slug: IdToSlug(entryData.prevSlug), 
+  title: entryData.prevTitle 
+} : null;
+const nextPost = entryData.nextSlug ? { 
+  slug: IdToSlug(entryData.nextSlug), 
+  title: entryData.nextTitle 
+} : null;
 ---
 
 {
@@ -23,6 +33,8 @@ const { Content } = await render(entry);
       subTitle={entry.data.description}
       bannerImage={entry.data.cover}
       published={entry.data.published}
+      prevPost={prevPost}
+      nextPost={nextPost}
     >
       <div
         class="hidden"
@@ -48,6 +60,8 @@ const { Content } = await render(entry);
       license={{ name: entry.data.licenseName, url: entry.data.licenseUrl }}
       author={entry.data.author}
       sourceLink={entry.data.sourceLink}
+      prevPost={prevPost}
+      nextPost={nextPost}
     >
       <div
         class="hidden"
