--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,5 @@
 ---
-import YukinaConfig from "../../yukina.config";
+import RyuChanConfig from "../../ryuchan.config";
 import GlobalStyles from "./GlobalStyles.astro";
 import ScriptSetup from "./ScriptSetup.astro";
 import SakuraEffect from "./SakuraEffect.astro";
@@ -17,29 +17,29 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 <link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
-<title>{YukinaConfig.title}</title>
-<meta name="title" content={YukinaConfig.title} />
-<meta name="description" content={YukinaConfig.description} />
+<title>{RyuChanConfig.title}</title>
+<meta name="title" content={RyuChanConfig.title} />
+<meta name="description" content={RyuChanConfig.description} />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
-<meta property="og:title" content={YukinaConfig.title} />
-<meta property="og:description" content={YukinaConfig.description} />
+<meta property="og:title" content={RyuChanConfig.title} />
+<meta property="og:description" content={RyuChanConfig.description} />
 <!-- <meta property="og:image" content={new URL(image, Astro.url)} /> -->
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
-<meta property="twitter:title" content={YukinaConfig.title} />
-<meta property="twitter:description" content={YukinaConfig.description} />
+<meta property="twitter:title" content={RyuChanConfig.title} />
+<meta property="twitter:description" content={RyuChanConfig.description} />
 <!-- <meta property="twitter:image" content={new URL(image, Astro.url)} /> -->
 
 <!-- RSS AutoDiscovery -->
 <link
   rel="alternate"
   type="application/rss+xml"
-  title={YukinaConfig.title}
+  title={RyuChanConfig.title}
   href={new URL("rss.xml", Astro.site)}
 />
 
