--- a/src/components/SakuraEffect.astro
+++ b/src/components/SakuraEffect.astro
@@ -1,8 +1,8 @@
 ---  
-import YukinaConfig from "../../yukina.config";  
+import RyuChanConfig from "../../ryuchan.config";  
 ---  
   
-<script define:vars={{ sakuraConfig: YukinaConfig.sakura || { enable: false } }}>  
+<script define:vars={{ sakuraConfig: RyuChanConfig.sakura || { enable: false } }}>  
   // 樱花对象类  
   class Sakura {  
     constructor(x, y, s, r, fn, idx, img, limitArray, config) {  
