--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -3,7 +3,7 @@ import Base from "./BaseLayout.astro";
 import NavBar from "../components/NavBar.astro";
 import Banner from "../components/Banner.astro";
 
-import YukinaConfig from "../../yukina.config";
+import RyuChanConfig from "../../ryuchan.config";
 import Footer from "../components/Footer.astro";
 import SideBar from "../components/SideBar.astro";
 
@@ -21,7 +21,7 @@ const props = Astro.props;
   <NavBar />
 
   {
-    YukinaConfig.bannerStyle == "LOOP" && (
+    RyuChanConfig.bannerStyle == "LOOP" && (
       <Banner
         title={props.title}
         subTitle={props.subTitle}
