--- a/src/pages/navigation.astro
+++ b/src/pages/navigation.astro
@@ -1,6 +1,6 @@
 ---  
 import MainLayout from "../layouts/MainLayout.astro";  
-import YukinaConfig from "../../yukina.config";  
+import RyuChanConfig from "../../ryuchan.config";  
 import { Icon } from "astro-icon/components";  
 import NavigationCard from "../components/NavigationCard.astro";  
 ---  
