--- a/src/pages/bangumi.astro
+++ b/src/pages/bangumi.astro
@@ -1,9 +1,9 @@
 ---  
 import MainLayout from "../layouts/MainLayout.astro";  
-import YukinaConfig from "../../yukina.config";  
+import RyuChanConfig from "../../ryuchan.config";  
 ---  
   
-<MainLayout title={`追番 - ${YukinaConfig.title}`}>  
+<MainLayout title={`追番 - ${RyuChanConfig.title}`}>  
   <div class="container mx-auto px-4 py-8">  
     <h1 class="text-3xl font-bold mb-6">追番列表</h1>  
     <!-- 您的追番内容 -->  
